<resources>
    <string name="app_name">MyTravelJournal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Stefania Silivestru</string>
    <string name="nav_header_subtitle">stefania.silivestru04@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contactus">Contact us</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add_memory">Add Memory</string>

    <string name="settings_change_theme">Press button to change theme</string>
    <string name="settings_change_language">Choose your language</string>

    <string name="profile_app_name">MyTravelJournal</string>
    <string name="profile_app_version">Version 1.0</string>
    <string name="profile_app_developer">Developed by: Stefania Silivestru</string>
    <string name="profile_app_copyright">Copyright © 2024 AndroidAcademy</string>

    <string name="contact_text">Here you can write us a message to improve your experience with our app.</string>
    <string name="share_text">Share your travel experience with your friends!</string>

    <string name="btn_change_theme">Change Theme</string>
    <string name="text_add_memory">Press the button to add a new memory</string>
    <string name="favourite">Favourite</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="text_view_details">View Details</string>
    <string name="text_edit_memory">Edit memory</string>
    <string name="edit_memory">Edit Memory</string>
    <string name="add_memory_place_name">Place Name: </string>
    <string name="add_memory_place_location">Place Location: </string>
    <string name="add_memory_date_of_travel">Date of Travel: </string>
    <string name="add_memory_travel_type">Travel Type: </string>
    <string name="add_memory_travel_mood">Travel Mood: </string>
    <string name="add_memory_travel_notes">Travel Notes: </string>
    <string name="add_memory_save_memory">Save Memory</string>
    <string name="text_button_share">Share</string>
    <string name="add_memory_add_photos">Add photos</string>
    <string name="contactus_button_compose_email">Compose Email</string>
</resources>