<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mytraveljournal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

        <action
            android:id="@+id/action_nav_home_to_nav_add_memory"
            app:destination="@id/nav_add_memory" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mytraveljournal.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.mytraveljournal.ui.contactus.ContacusFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contactus" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.mytraveljournal.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mytraveljournal.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_add_memory"
        android:name="com.example.mytraveljournal.AddMemoryFragment"
        android:label="@string/menu_add_memory"
        tools:layout="@layout/fragment_add_memory" />

    <action
        android:id="@+id/action_nav_add_memory_to_nav_home"
        app:destination="@id/nav_home" />
    <fragment
        android:id="@+id/nav_details_memory"
        android:name="com.example.mytraveljournal.DetailsMemoryFragment"
        android:label="Details Memory"
        tools:layout="@layout/fragment_details_memory" />
    <action
        android:id="@+id/action_nav_home_to_nav_details_memory"
        app:destination="@id/nav_details_memory" />
    <fragment
        android:id="@+id/nav_edit_memory"
        android:name="com.example.mytraveljournal.EditMemoryFragment"
        android:label="Edit Memory"
        tools:layout="@layout/fragment_edit_memory" />

    <action
        android:id="@+id/action_nav_home_to_nav_edit_memory"
        app:destination="@id/nav_edit_memory" />

    <action
        android:id="@+id/action_nav_edit_memory_to_nav_home"
        app:destination="@id/nav_home" />

</navigation>