<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="memory"
            type="com.example.mytraveljournal.TravelMemory" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/background_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/placeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{memory.placeName}"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/dateOfTravel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{memory.dateOfTravel}"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <ToggleButton
                android:id="@+id/isFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/favourite"
                android:textOff="@string/add_to_favourite"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/background_color" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_edit_memory"
                android:layout_marginTop="8dp"
                android:background="@color/background_color"
                android:padding="12dp" />

            <Button
                android:id="@+id/detailsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/background_color"
                android:text="@string/text_view_details"
                android:padding="12dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
